--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,14 @@
-asgiref==3.4.1
-behave==1.2.6
+asgiref==3.5.2
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 Django==3.2.13
 gunicorn==20.1.0
 heroku==0.1.4
 idna==3.3
-parse==1.19.0
-parse-type==0.6.0
 python-dateutil==1.5
 pytz==2022.1
 requests==2.27.1
-six==1.16.0
 sqlparse==0.4.2
-typing_extensions==4.1.1
+typing_extensions==4.2.0
 urllib3==1.26.9
+whitenoise==6.1.0
