--- a/.gitignore
+++ b/.gitignore
@@ -58,8 +58,8 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
+#db.sqlite3
+#db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -103,7 +103,7 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
+#.venv
 env/
 venv/
 ENV/
