--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
-asgiref==3.5.2
-certifi==2022.5.18.1
+asgiref==3.4.1
+beautifulsoup4==4.11.1
+behave==1.2.6
+behave-django==1.4.0
+certifi==2021.10.8
 charset-normalizer==2.0.12
-Django==3.2.13
+click==8.0.4
+dj-database-url==0.5.0
+Django==3.1.3
+django-chartjs==2.3.0
+django-createsuperuser==2020.12.3
+django-crispy-forms==1.13.0
 gunicorn==20.1.0
-heroku==0.1.4
 idna==3.3
-python-dateutil==1.5
+importlib-metadata==4.8.3
+parse==1.19.0
+parse-type==0.6.0
+pkg_resources==0.0.0
 pytz==2022.1
 requests==2.27.1
+selenium==3.141.0
+six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
-typing_extensions==4.2.0
+typing_extensions==4.1.1
 urllib3==1.26.9
-whitenoise==6.1.0
+whitenoise==5.3.0
+zipp==3.6.0
