--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,30 @@
 asgiref==3.4.1
+attrs==21.4.0
 beautifulsoup4==4.11.1
 behave==1.2.6
 behave-django==1.4.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.0.4
-dj-database-url==0.5.0
-Django==3.1.3
-django-chartjs==2.3.0
-django-createsuperuser==2020.12.3
-django-crispy-forms==1.13.0
-gunicorn==20.1.0
-idna==3.3
+behave-webdriver==0.3.1
+Django==3.2.13
+django-behave==0.1.6
 importlib-metadata==4.8.3
+iniconfig==1.1.1
+packaging==21.3
 parse==1.19.0
 parse-type==0.6.0
+pkg-resources==0.0.0
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.9
+pytest==7.0.1
+pytest-html==3.1.1
+pytest-metadata==1.11.0
 pytz==2022.1
-requests==2.27.1
 selenium==3.141.0
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
-typing_extensions==4.1.1
+tomli==1.2.3
+typing-extensions==4.1.1
 urllib3==1.26.9
 whitenoise==5.3.0
 zipp==3.6.0
