--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ beautifulsoup4==4.11.1
 behave==1.2.6
 behave-django==1.4.0
 behave-webdriver==0.3.1
+certifi==2022.6.15
+charset-normalizer==2.0.12
 Django==3.2.13
 django-behave==0.1.6
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.8.3
 iniconfig==1.1.1
 packaging==21.3
@@ -19,6 +22,7 @@ pytest==7.0.1
 pytest-html==3.1.1
 pytest-metadata==1.11.0
 pytz==2022.1
+requests==2.27.1
 selenium==3.141.0
 six==1.16.0
 soupsieve==2.3.2.post1
