--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -4,7 +4,7 @@ name: Daily Data Pull from JSON
 on:
   schedule:
     # Runs "at hour 15, minute 30 every day"
-    - cron: '30 15 * * *'
+    - cron: '30 * * * *'
     
 jobs:
   build:
