--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -2,9 +2,13 @@
 name: Daily Data Pull from JSON
 
 on:
-  schedule:
+  push:
+    branches:
+      - master
+      
+  #schedule:
     # Runs "at hour 15, minute 30 every day"
-    - cron: '30 * * * *'
+    #- cron: '30 * * * *'
     
 jobs:
   build:
